<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*******************************************************************************
  ~  eGov suite of products aim to improve the internal efficiency,transparency,
  ~      accountability and the service delivery of the government  organizations.
  ~
  ~        Copyright (C) <2016>  eGovernments Foundation
  ~
  ~        The updated version of eGov suite of products as by eGovernments Foundation
  ~        is available at http://www.egovernments.org
  ~
  ~        This program is free software: you can redistribute it and/or modify
  ~        it under the terms of the GNU General Public License as published by
  ~        the Free Software Foundation, either version 3 of the License, or
  ~        any later version.
  ~
  ~        This program is distributed in the hope that it will be useful,
  ~        but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~        GNU General Public License for more details.
  ~
  ~        You should have received a copy of the GNU General Public License
  ~        along with this program. If not, see http://www.gnu.org/licenses/ or
  ~        http://www.gnu.org/licenses/gpl.html .
  ~
  ~        In addition to the terms of the GPL license to be adhered to in using this
  ~        program, the following additional terms are to be complied with:
  ~
  ~    	1) All versions of this program, verbatim or modified must carry this
  ~    	   Legal Notice.
  ~
  ~    	2) Any misrepresentation of the origin of the material is prohibited. It
  ~    	   is required that all modified versions of this material be marked in
  ~    	   reasonable ways as different from the original version.
  ~
  ~    	3) This license does not grant any rights to any user of the program
  ~    	   with regards to rights under trademark law for use of the trade names
  ~    	   or trademarks of eGovernments Foundation.
  ~
  ~      In case of any queries, you can reach eGovernments Foundation at contact@egovernments.org.
  ~  ******************************************************************************/
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/propertywatertax_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    card_view:cardUseCompatPadding="true"
    android:layout_margin="5dp"
    android:layout_marginBottom="10dp"
    android:visibility="gone"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/watertax_assessmentno_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/consumercode_label"
                android:textSize="@dimen/field_labelSize" />

            <TextView
                android:id="@+id/watertax_assessmentno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/data_labelSize" />

            <TextView
                android:id="@+id/propertytax_contact_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/ownername_contactno_label"
                android:textSize="@dimen/field_labelSize" />

            <TextView
                android:id="@+id/watertax_ownernamecontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/data_labelSize" />

            <TextView
                android:id="@+id/propertytax_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/address_label"
                android:textSize="@dimen/field_labelSize" />

            <TextView
                android:id="@+id/watertax_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/data_labelSize" />

            <TextView
                android:id="@+id/propertytax_locality_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/locality_label"
                android:textSize="@dimen/field_labelSize" />

            <TextView
                android:id="@+id/watertax_locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dataLabelColor"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/data_labelSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/balance_due"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/data_labelSize" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"></LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/watertax_arrears_total_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/arrears_total"
                        android:textSize="@dimen/field_labelSize" />

                    <TextView
                        android:id="@+id/watertax_arrears_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dataLabelColor"
                        android:gravity="right"
                        android:layout_marginBottom="5dp"
                        android:textSize="@dimen/data_labelSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/watertax_arrears_penalty_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/arrears_penalty"
                        android:textSize="@dimen/field_labelSize" />

                    <TextView
                        android:id="@+id/watertax_arrears_penalty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="@color/dataLabelColor"
                        android:layout_marginBottom="5dp"
                        android:textSize="@dimen/data_labelSize" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/watertax_current_total_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/current_total"
                        android:textSize="@dimen/field_labelSize" />

                    <TextView
                        android:id="@+id/watertax_current_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dataLabelColor"
                        android:gravity="right"
                        android:layout_marginBottom="5dp"
                        android:textSize="@dimen/data_labelSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/watertax_current_penalty_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/current_penalty"
                        android:textSize="@dimen/field_labelSize" />

                    <TextView
                        android:id="@+id/watertax_current_penalty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dataLabelColor"
                        android:gravity="right"
                        android:layout_marginBottom="5dp"
                        android:textSize="@dimen/data_labelSize" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/watertax_total_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/total"
                        android:textSize="@dimen/field_labelSize" />

                    <TextView
                        android:id="@+id/watertax_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="@color/dataLabelColor"
                        android:textSize="24sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Breakups"
                android:layout_margin="5dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="#2095F3"
                android:id="@+id/btnbreakups" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
